--- a/Trabalho N2 - Algoritmos/Makefile.win
+++ b/Trabalho N2 - Algoritmos/Makefile.win
@@ -6,12 +6,12 @@ CC       = gcc.exe
 WINDRES  = windres.exe
 OBJ      = main.o mapFunctions.o interface.o actions.o phase.o
 LINKOBJ  = main.o mapFunctions.o interface.o actions.o phase.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -L"C:/Users/User/Desktop/SDL/libs" -static-libgcc -L"C:/Users/ribei/Desktop/Trabalho N2 - Algoritmos/libs" -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -L"C:/Users/User/Documents/Ppd/DuckZard/Trabalho N2 - Algoritmos/libs" -L"C:/Users/ribei/Desktop/Trabalho N2 - Algoritmos/libs" -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer
-INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Users/User/Desktop/SDL/include"
-CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
+LIBS     = -L"D:/Dev-Cpp/MinGW64/lib" -L"D:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -L"C:/Users/ribei/Documents/GitHub/DuckZard/Trabalho N2 - Algoritmos/libs" -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer
+INCS     = -I"D:/Dev-Cpp/MinGW64/include" -I"D:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"D:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
+CXXINCS  = -I"D:/Dev-Cpp/MinGW64/include" -I"D:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"D:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"D:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
 BIN      = DuckZard.exe
 CXXFLAGS = $(CXXINCS) 
-CFLAGS   = $(INCS) -I"C:\Users\ribei\Desktop\Trabalho N2 - Algoritmos\include" -I"C:\Users\User\Documents\Ppd\DuckZard\Trabalho N2 - Algoritmos\include"
+CFLAGS   = $(INCS) -I"C:\Users\ribei\Documents\GitHub\DuckZard\Trabalho N2 - Algoritmos\include"
 RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
