--- a/Trabalho N2 - Algoritmos/Makefile.win
+++ b/Trabalho N2 - Algoritmos/Makefile.win
@@ -4,11 +4,11 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = main.o mapFunctions.o interface.o actions.o phase.o menuScreens.o
-LINKOBJ  = main.o mapFunctions.o interface.o actions.o phase.o menuScreens.o
-LIBS     = -L"D:/Dev-Cpp/MinGW64/lib" -L"D:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -L"C:/Users/ribei/Documents/GitHub/DuckZard/Trabalho N2 - Algoritmos/libs" -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -L"C:/Users/User/Documents/Ppd/DuckZard/Trabalho N2 - Algoritmos/libs"  -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer
-INCS     = -I"D:/Dev-Cpp/MinGW64/include" -I"D:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"D:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
-CXXINCS  = -I"D:/Dev-Cpp/MinGW64/include" -I"D:/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"D:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"D:/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
+OBJ      = main.o mapFunctions.o interface.o actions.o phase.o menuScreens.o statistics.o
+LINKOBJ  = main.o mapFunctions.o interface.o actions.o phase.o menuScreens.o statistics.o
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -L"C:/Users/User/Desktop/SDL/libs" -static-libgcc -L"C:/Users/ribei/Documents/GitHub/DuckZard/Trabalho N2 - Algoritmos/libs" -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -L"C:/Users/User/Documents/Ppd/DuckZard/Trabalho N2 - Algoritmos/libs"  -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer
+INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Users/User/Desktop/SDL/include"
+CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
 BIN      = DuckZard.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) -I"C:\Users\ribei\Documents\GitHub\DuckZard\Trabalho N2 - Algoritmos\include" -I"C:\Users\User\Documents\Ppd\DuckZard\Trabalho N2 - Algoritmos\include"
@@ -41,3 +41,6 @@ phase.o: phase.c
 
 menuScreens.o: menuScreens.c
 	$(CC) -c menuScreens.c -o menuScreens.o $(CFLAGS)
+
+statistics.o: statistics.c
+	$(CC) -c statistics.c -o statistics.o $(CFLAGS)
